<resources>
    <string name="app_name">Booka</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="default_web_client_id">801473124872-j6tdv9ectij8h81jiks9scb7iqktd2ev.apps.googleusercontent.com</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="conectar_con_google">Conectar con Google</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="buscar">Buscar</string>
    <string name="_4_5">4.5</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rese_as">Reseñas</string>
    <string name="username">username</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="t_tulo">Título</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="default_pic_link"><![CDATA[https://firebasestorage.googleapis.com/v0/b/booka-hg.firebasestorage.app/o/default-pic.png?alt=media&token=473bcf95-1b59-4711-af03-147ef9d27e51]]></string>
    <string name="detalles_de_la_cuenta">Detalles de la cuenta</string>
    <string name="servicios">Servicios</string>
    <string name="no_hay_rese_as_a_n">No hay reseñas aún</string>
    <string name="reservar">Reservar</string>
    <string name="fecha">Fecha</string>
    <string name="horarios_disponibles">Horarios disponibles</string>
    <string name="reservas">Reservas</string>
    <string name="no_hay_reservas_a_n">No hay reservas aún.</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="valoraci_n">Valoración</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
</resources>