<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/username"
        android:textColor="@color/booka_text_primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textview"
        android:textColor="@color/booka_text_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblUser"
        app:layout_constraintEnd_toStartOf="@+id/lblRating"
        app:layout_constraintStart_toEndOf="@+id/lblUser"
        app:layout_constraintTop_toTopOf="@+id/lblUser" />

    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textview"
        android:textColor="@color/booka_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imgStar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUser" />

    <TextView
        android:id="@+id/lblRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_4_5"
        android:textColor="@color/booka_text_primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgStar"
        app:layout_constraintEnd_toStartOf="@+id/imgStar"
        app:layout_constraintTop_toTopOf="@+id/imgStar" />

    <ImageView
        android:id="@+id/imgStar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_star" />
</androidx.constraintlayout.widget.ConstraintLayout>