<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booka_primary"
    android:elevation="6dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgBusinessInfo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBusinessInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="225dp"
            android:background="@drawable/rounded_background_top_25"
            android:backgroundTint="@color/booka_background">

            <TextView
                android:id="@+id/lblBusinessName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/textview"
                android:textColor="@color/booka_text_primary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblBusinessAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/textview"
                android:textColor="@color/booka_text_secondary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/lblBusinessName"
                app:layout_constraintTop_toBottomOf="@id/lblBusinessName" />

            <TextView
                android:id="@+id/lblRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/_4_5"
                android:textColor="@color/booka_text_primary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/imgStar"
                app:layout_constraintEnd_toStartOf="@id/imgStar"
                app:layout_constraintTop_toTopOf="@id/imgStar" />

            <ImageView
                android:id="@+id/imgStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@id/lblBusinessName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lblBusinessName"
                app:srcCompat="@drawable/ic_star" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="@color/booka_input_stroke"
                app:layout_constraintEnd_toEndOf="@id/imgStar"
                app:layout_constraintStart_toStartOf="@id/lblBusinessAddress"
                app:layout_constraintTop_toBottomOf="@id/lblBusinessAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/servicios"
                android:textColor="@color/booka_text_primary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="@color/booka_input_stroke"
                app:layout_constraintEnd_toEndOf="@id/imgStar"
                app:layout_constraintStart_toStartOf="@id/lblBusinessAddress"
                app:layout_constraintTop_toBottomOf="@id/rvServices" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/rese_as"
                android:textColor="@color/booka_text_primary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReviewsInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/rvServices"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/txtEmptyReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/no_hay_rese_as_a_n"
                android:textColor="@color/booka_text_secondary"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBooking"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reservar"
        android:textSize="20sp"
        app:elevation="6dp"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>