<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booka_primary"
    tools:context=".view.activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-25dp"
        android:background="@color/booka_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSettings">

        <TextView
            android:id="@+id/lblAccount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rounded_background_all_25"
            android:backgroundTint="@color/booka_background"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:text="@string/detalles_de_la_cuenta"
            android:textColor="@color/booka_text_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsernameContainer"
            style="@style/Widget.Booka.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/booka_input_background"
            android:elevation="10dp"
            android:hint="@string/nombre"
            android:textColorHint="@color/booka_text_primary"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/booka_primary"
            app:boxStrokeWidth="1dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/lblAccount"
            app:layout_constraintTop_toBottomOf="@+id/lblAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/montserrat_bold"
                android:singleLine="true"
                android:textColor="@color/booka_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmailContainer2"
            style="@style/Widget.Booka.TextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/booka_input_background"
            android:hint="@string/correo_electronico"
            android:textColorHint="@color/booka_text_primary"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/booka_primary"
            app:boxStrokeWidth="1dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/txtUsernameContainer"
            app:layout_constraintStart_toStartOf="@id/txtUsernameContainer"
            app:layout_constraintTop_toBottomOf="@id/txtUsernameContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:enabled="false"
                android:fontFamily="@font/montserrat_bold"
                android:singleLine="true"
                android:textColor="@color/booka_secondary"
                android:textColorHint="@color/booka_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lblSettings"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_background_all_25"
        android:backgroundTint="@color/booka_background"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:paddingHorizontal="55dp"
        android:text="@string/configuraci_n"
        android:textAlignment="center"
        android:textColor="@color/booka_text_primary"
        android:textSize="20sp"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>