<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booka_primary"
    tools:context=".view.activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-25dp"
        android:background="@color/booka_background"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBooking">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDatePicker"
            style="@style/Widget.Booka.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/booka_input_background"
            android:elevation="10dp"
            android:hint="@string/fecha"
            android:textColorHint="@color/booka_text_primary"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/booka_primary"
            app:boxStrokeWidth="1dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/rvServices"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rvServices"
            app:layout_constraintTop_toBottomOf="@+id/rvServices">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDatePicker2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:focusable="false"
                android:fontFamily="@font/montserrat_bold"
                android:singleLine="true"
                android:textColor="@color/booka_secondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSchedule"
            style="@style/Widget.Booka.TextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/booka_input_background"
            android:hint="@string/horarios_disponibles"
            android:textColorHint="@color/booka_text_primary"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/booka_primary"
            app:boxStrokeWidth="1dp"
            app:expandedHintEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/txtDatePicker"
            app:layout_constraintStart_toStartOf="@+id/txtDatePicker"
            app:layout_constraintTop_toBottomOf="@+id/txtDatePicker">

            <AutoCompleteTextView
                android:id="@+id/spSchedule"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:fontFamily="@font/montserrat_bold"
                android:inputType="none"
                android:paddingLeft="15dp"
                android:textColor="@color/booka_secondary"
                android:textColorHint="@color/booka_secondary" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lblBooking"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_background_all_25"
        android:backgroundTint="@color/booka_background"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:paddingHorizontal="55dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/booka_text_primary"
        android:textSize="20sp"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBooking"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reservar"
        android:textSize="20sp"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>