<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/booka_background"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_booka"
        tools:ignore="NotSibling" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNombreContainer"
        style="@style/Widget.Booka.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/booka_input_background"
        android:elevation="10dp"
        android:hint="@string/nombre"
        android:textColorHint="@color/booka_text_primary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/booka_primary"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txtEmailContainer"
        app:layout_constraintEnd_toEndOf="@+id/txtEmailContainer"
        app:layout_constraintStart_toStartOf="@+id/txtEmailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:singleLine="true"
            android:textColor="@color/booka_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailContainer"
        style="@style/Widget.Booka.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/booka_input_background"
        android:elevation="10dp"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/booka_text_primary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/booka_primary"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:singleLine="true"
            android:textColor="@color/booka_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordContainer"
        style="@style/Widget.Booka.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/booka_input_background"
        android:hint="@string/contrasena"
        android:textColorHint="@color/booka_text_primary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/booka_primary"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/txtEmailContainer"
        app:layout_constraintStart_toStartOf="@+id/txtEmailContainer"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/booka_secondary"
            android:textColorHint="@color/booka_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfirmPasswordContainer"
        style="@style/Widget.Booka.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/booka_input_background"
        android:hint="@string/confirmar_contrasena"
        android:textColorHint="@color/booka_text_primary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/booka_primary"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/txtPasswordContainer"
        app:layout_constraintStart_toStartOf="@+id/txtPasswordContainer"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/booka_secondary"
            android:textColorHint="@color/booka_secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/registrarse"
        android:textSize="20sp"
        app:iconGravity="textStart"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>